exports[`ResultListHeader component should render 1`] = `
<div
  className="panel panel--accent">
  <div
    className="panel__body">
    <div
      className="float--right">
      <span
        className="popover__group popover__hoverTrigger">
        <a
          className="actionLink"
          href="https://TEST.sparkpost.com/sign-up?return=http://localhost/"
          title="Save Results">
          Save Results
        </a>
        <span
          className="popover popover--top popover--m">
          Create a free SparkPost account or login into your account to save results
        </span>
      </span>
      <span
        className="popover__group"
        onClick={[Function]}>
        <a
          className="actionLink"
          onClick={[Function]}
          style={Object {}}
          title="Share">
          Share
        </a>
        <div
          className="popover copyPopover popover--l popover--rightAligned popover--bottom">
          <h6
            className="text--left copyPopover__label">
            <i
              className="fa fa-check-circle " />
             Copied to Clipboard!
          </h6>
          <p
            className="copyPopover__copiedString">
            http://localhost/
          </p>
          <input
            className="copyPopover__hidden"
            readOnly={true}
            value="http://localhost/" />
        </div>
      </span>
      <a
        className="actionLink"
        onClick={[Function]}
        style={Object {}}
        title="Refresh Messages">
        Refresh
      </a>
    </div>
    <p
      className="dkimResultListHeader__label marginBottom--xs">
      Generated Test Address
    </p>
    <h3
      className="dkimResultListHeader__email">
      some@email.com
    </h3>
  </div>
</div>
`;

exports[`ResultListHeader component should render when logged in 1`] = `
<div
  className="panel panel--accent">
  <div
    className="panel__body">
    <div
      className="float--right">
      <span
        className="popover__group"
        onClick={[Function]}>
        <a
          className="actionLink"
          onClick={[Function]}
          style={Object {}}
          title="Share">
          Share
        </a>
        <div
          className="popover copyPopover popover--l popover--rightAligned popover--bottom">
          <h6
            className="text--left copyPopover__label">
            <i
              className="fa fa-check-circle " />
             Copied to Clipboard!
          </h6>
          <p
            className="copyPopover__copiedString">
            http://localhost/
          </p>
          <input
            className="copyPopover__hidden"
            readOnly={true}
            value="http://localhost/" />
        </div>
      </span>
      <a
        className="actionLink"
        onClick={[Function]}
        style={Object {}}
        title="Refresh Messages">
        Refresh
      </a>
    </div>
    <p
      className="dkimResultListHeader__label marginBottom--xs">
      Generated Test Address
    </p>
    <h3
      className="dkimResultListHeader__email">
      some@email.com
    </h3>
  </div>
</div>
`;

exports[`ResultListHeader component should render when not logged in 1`] = `
<div
  className="panel panel--accent">
  <div
    className="panel__body">
    <div
      className="float--right">
      <span
        className="popover__group popover__hoverTrigger">
        <a
          className="actionLink"
          href="https://TEST.sparkpost.com/sign-up?return=http://localhost/"
          title="Save Results">
          Save Results
        </a>
        <span
          className="popover popover--top popover--m">
          Create a free SparkPost account or login into your account to save results
        </span>
      </span>
      <span
        className="popover__group"
        onClick={[Function]}>
        <a
          className="actionLink"
          onClick={[Function]}
          style={Object {}}
          title="Share">
          Share
        </a>
        <div
          className="popover copyPopover popover--l popover--rightAligned popover--bottom">
          <h6
            className="text--left copyPopover__label">
            <i
              className="fa fa-check-circle " />
             Copied to Clipboard!
          </h6>
          <p
            className="copyPopover__copiedString">
            http://localhost/
          </p>
          <input
            className="copyPopover__hidden"
            readOnly={true}
            value="http://localhost/" />
        </div>
      </span>
      <a
        className="actionLink"
        onClick={[Function]}
        style={Object {}}
        title="Refresh Messages">
        Refresh
      </a>
    </div>
    <p
      className="dkimResultListHeader__label marginBottom--xs">
      Generated Test Address
    </p>
    <h3
      className="dkimResultListHeader__email">
      some@email.com
    </h3>
  </div>
</div>
`;

exports[`ResultListHeader component should render with an error present 1`] = `
<div
  className="panel panel--accent">
  <div
    className="panel__body">
    <div
      className="float--right">
      <span
        className="popover__group popover__hoverTrigger">
        <a
          className="actionLink"
          href="https://TEST.sparkpost.com/sign-up?return=http://localhost/"
          title="Save Results">
          Save Results
        </a>
        <span
          className="popover popover--top popover--m">
          Create a free SparkPost account or login into your account to save results
        </span>
      </span>
      <span
        className="popover__group"
        onClick={[Function]}>
        <a
          className="actionLink"
          onClick={[Function]}
          style={Object {}}
          title="Share">
          Share
        </a>
        <div
          className="popover copyPopover popover--l popover--rightAligned popover--bottom">
          <h6
            className="text--left copyPopover__label">
            <i
              className="fa fa-check-circle " />
             Copied to Clipboard!
          </h6>
          <p
            className="copyPopover__copiedString">
            http://localhost/
          </p>
          <input
            className="copyPopover__hidden"
            readOnly={true}
            value="http://localhost/" />
        </div>
      </span>
      <a
        className="actionLink"
        onClick={[Function]}
        style={Object {}}
        title="Refresh Messages">
        Refresh
      </a>
    </div>
    <p
      className="dkimResultListHeader__label marginBottom--xs">
      Generated Test Address
    </p>
    <h3
      className="dkimResultListHeader__email">
      some@email.com
    </h3>
  </div>
</div>
`;
